# Unit-tests

./: CMakeLists.txt  README.md  library.h  tests.cpp  Звіт_ЛР_Unit_Tests.docx
googletest/: CMakeLists.txt
